# MyJob

./: .env.example  .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  SCRIPT.md  SKILL.md  THIRD_PARTY_NOTICES.md  VERSION  app_auth.py  boss_app.py  boss_automation.py  boss_company.py  boss_firefox.py  boss_geo.py  boss_replier.py  boss_state.py  job_campaign.py  job_platforms.py  myjob_server.py  myjob_tls.py  pyproject.toml  requirements.txt  resume_documents.py  resume_store.py  resume_tailor.py  scraper.py  setup.sh  start.bat
MyJob_cli/: __init__.py  cli.py  client.py  output.py  schema.json
browser_extension/: README.md  background.js  manifest.json  pageBridge.js  platformContent.js
docs/: frontend-backend-architecture.md
docs/testing/: v0.0.10-jd-tailoring.tdd.md
interview/: ai_config.py  batch_seed.py  benchmark.py  db.py  engine.py  fast_qa.py  llm_client.py  main.py
lakejob_cli/: __init__.py  cli.py  client.py  schema.json
resume_ui/: index.html  package-lock.json  package.json  vite.config.js
resume_ui/src/: App.vue  Workspace.vue  api.js  applicationLimits.js  main.js  marketing.css  model.js  platformBridge.js  platformCatalog.js  platformStore.js  product.js  resumeTailor.js  style.css  tailor.css  theme.js  workspace.css
static/: dashboard.html
tests/: test_auth.py  test_boss_extension_search.py  test_boss_state.py  test_client_platform_boundary.py  test_https.py  test_job_platforms.py  test_login_controls.py  test_resume_campaign.py  test_resume_documents.py  test_search_compat.py  test_version_consistency.py
(+134 files in other folders)
