[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myjob"
version = "0.0.5"
description = "MyJob · AI 驱动的智能求职助手"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "MyJob" }]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "pyyaml>=6.0",
    "httpx>=0.24",
    "python-multipart>=0.0.9",
    "python-docx>=1.1",
    "reportlab>=4.0",
    "pdfplumber>=0.11",
    "pypdf>=5.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
myjob = "MyJob_cli.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["MyJob_cli"]
